[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/QingyueWang/inGameUI.gd" type="Script" id=1]
[ext_resource path="res://assets/art/coin/coin.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=7]
size = 30
extra_spacing_top = -4
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "coin_spinning",
"speed": 6.5
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 3 )

[node name="InGameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 4.0
margin_right = -701.0
margin_bottom = -426.0
custom_fonts/font = SubResource( 7 )
text = "100"
align = 2
valign = 1
autowrap = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 26, 27 )
scale = Vector2( 4.375, 4.375 )
frames = SubResource( 6 )
animation = "coin_spinning"

[node name="DoubleJump" type="Button" parent="."]
margin_left = 124.0
margin_top = 18.0
margin_right = 218.0
margin_bottom = 38.0
text = "Double Jump"

[node name="Label" type="Label" parent="DoubleJump"]
margin_left = 30.0
margin_top = 27.0
margin_right = 70.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="AnimatedSprite" type="AnimatedSprite" parent="DoubleJump/Label"]
position = Vector2( 31, 11 )
scale = Vector2( 2.1875, 2.1875 )
frames = SubResource( 6 )
animation = "coin_spinning"

[node name="shooting" type="Button" parent="."]
margin_left = 242.0
margin_top = 18.0
margin_right = 254.0
margin_bottom = 38.0
text = "Shooting"

[node name="Label" type="Label" parent="shooting"]
margin_left = 14.0
margin_top = 26.0
margin_right = 54.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="AnimatedSprite" type="AnimatedSprite" parent="shooting/Label"]
position = Vector2( 31, 11 )
scale = Vector2( 2.1875, 2.1875 )
frames = SubResource( 6 )
animation = "coin_spinning"

[node name="Player1" type="Panel" parent="."]
margin_left = 569.0
margin_top = 449.0
margin_right = 755.0
margin_bottom = 469.0

[node name="Label" type="Label" parent="Player1"]
margin_left = -58.0
margin_right = -10.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 9 )
text = "Lives:"

[node name="ColorRect" type="ColorRect" parent="Player1"]
margin_left = 3.0
margin_top = 2.0
margin_right = 183.0
margin_bottom = 18.0
color = Color( 0.517647, 0.239216, 0.239216, 1 )

[node name="Player2" type="Panel" parent="."]
visible = false
margin_left = 157.0
margin_top = 449.0
margin_right = 343.0
margin_bottom = 469.0

[node name="Label" type="Label" parent="Player2"]
margin_left = -58.0
margin_right = -10.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 9 )
text = "Lives:"

[node name="ColorRect" type="ColorRect" parent="Player2"]
margin_left = 3.0
margin_top = 2.0
margin_right = 183.0
margin_bottom = 18.0
color = Color( 0.517647, 0.239216, 0.239216, 1 )

[connection signal="pressed" from="DoubleJump" to="." method="_on_DoubleJump_pressed"]
[connection signal="pressed" from="shooting" to="." method="_on_shooting_pressed"]
